Updated you may search by State

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -66,7 +66,7 @@
           <div class="status" id="status"></div>
 
           <div class="note">
-            You may search by city, county, meetup name, venue name, day of the week, and more.
+            You may search by state, county, city, meetup name, venue name, day of the week, and more.
             Data is managed in this <a href="https://github.com/RelativelyIrrelevant/bitcoindiana.org/blob/main/assets/data/meetups.json">GitHub repository</a>. 
             Please contact the developer to update.
           </div>
