--- a/merchants/illinois.html
+++ b/merchants/illinois.html
@@ -6,6 +6,13 @@
   <title>Merchants (IL) | bitcoINdiana</title>
   <meta name="description" content="A map of merchants that accept Bitcoin in Illinois" />
 
+  <!-- FavIcons -->
+  <link rel="icon" href="/assets/img/favicon/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-16x16.png" sizes="16x16">
+  <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
+  <link rel="manifest" href="/assets/img/favicon/site.webmanifest">
+  
   <!-- Shared site CSS -->
   <link rel="stylesheet" href="/assets/css/site.css" />
 
