--- a/merchants/ohio.html
+++ b/merchants/ohio.html
@@ -6,6 +6,13 @@
   <title>Merchants (OH) | bitcoINdiana</title>
   <meta name="description" content="A map of merchants that accept Bitcoin in Ohio" />
 
+  <!-- FavIcons -->
+  <link rel="icon" href="/assets/img/favicon/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-16x16.png" sizes="16x16">
+  <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
+  <link rel="manifest" href="/assets/img/favicon/site.webmanifest">
+  
   <link rel="stylesheet" href="/assets/css/site.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
