Update head values that merchants-router.js will overwrite

--- a/merchants/index.html
+++ b/merchants/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Generic Head values that merchants-router.js will overwrite --> 
   <title>Merchants | bitcoINdiana</title>
-  <meta name="description" content="A map of merchants that accept Bitcoin in Indiana." />
+  <meta name="description" content="A map of merchants that accept Bitcoin." />
+  <link rel="canonical" href="https://bitcoinindiana.org/merchants/" />
 
   <!-- FavIcons -->
   <link rel="icon" href="/assets/img/favicon/favicon.ico" sizes="any">
@@ -19,8 +22,6 @@
   <!-- Leaflet CSS (UNPKG) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
-  <!-- Symmetrical URLs, making /index.html and /merchants/index.html the same content -->
-  <link rel="canonical" href="https://bitcoinindiana.org/merchants/" />
 </head>
 
 <body>
