--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Generic Head values that merchants-router.js will overwrite --> 
   <title>Merchants | bitcoINdiana</title>
-  <meta name="description" content="A map of merchants that accept Bitcoin in Indiana." />
+  <meta name="description" content="A map of merchants that accept Bitcoin." />
+  <link rel="canonical" href="https://bitcoinindiana.org/merchants/" />
+
+  <!-- 2026-02-06 copy of /merchants/index.html -->
+  <!-- a Cloudflare 301 redirect will redirect from /index.html to /merchants/ -->
 
   <!-- FavIcons -->
   <link rel="icon" href="/assets/img/favicon/favicon.ico" sizes="any">
@@ -19,8 +25,6 @@
   <!-- Leaflet CSS (UNPKG) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
-  <!-- Symmetrical URLs, making /index.html and /merchants/index.html the same content -->
-  <link rel="canonical" href="https://bitcoinindiana.org/" />
 </head>
 
 <body>
@@ -67,13 +71,17 @@
       <aside class="panel" aria-label="Filters and info">
         <div class="controls">
           <div class="field">
+            <label for="stateSelect">State</label>
+            <select id="stateSelect"></select>
+          </div>
+          <div class="field">
             <label for="q">Search</label>
             <input id="q" type="text" placeholder="Search name, address…" autocomplete="off" />
           </div>
 
           <div class="chips" aria-label="Quick filters">
             <span class="chip">Source: api.btcmap.org (Places v4)</span>
-            <span class="chip">Indiana: point-in-polygon</span>
+            <span class="chip" id="pipChip">State: point-in-polygon</span>
             <span class="chip">Excluded: currency_exchange, local_atm</span>
           </div>
 
@@ -82,7 +90,7 @@
               Showing: <strong><span id="count">0</span></strong> <span id="countNote">locations</span>
             </div>
             <div class="btns">
-              <button id="btnFit" type="button">Fit Indiana</button>
+              <button id="btnFit" type="button">Fit</button>
               <button id="btnReload" type="button">Reload</button>
             </div>
           </div>
@@ -112,13 +120,15 @@
   </footer>
 
   <!-- Shared site JS (active nav, small helpers) -->
-  <script src="/assets/js/site.js"></script>
+  <script defer src="/assets/js/site.js"></script>
 
   <!-- Leaflet JS (UNPKG) -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script defer src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+  <!-- State-Specific merchants router -->
+  <script defer src="/assets/js/merchants-router.js"></script>
 
   <!-- Map logic -->
-  <script src="/assets/js/map.js"></script>
+  <script defer src="/assets/js/map.js"></script>
 </body>
 </html>
-
