Added /assets/js/playful-in.js to the end

--- a/merchants/index.html
+++ b/merchants/index.html
@@ -118,14 +118,18 @@
 
   <!-- Shared site JS (active nav, small helpers) -->
   <script defer src="/assets/js/site.js"></script>
-
+  
   <!-- Leaflet JS (UNPKG) -->
   <script defer src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
+  
   <!-- State-Specific merchants router -->
   <script defer src="/assets/js/merchants-router.js"></script>
-
+  
   <!-- Map logic -->
   <script defer src="/assets/js/map.js"></script>
+  
+  <!-- Playful IN highlighting – loads LAST so it sees final text with links -->
+  <script defer src="/assets/js/playful-in.js"></script>
+    
 </body>
 </html>
