Remove IN playfulness to debug

--- a/merchants/index.html
+++ b/merchants/index.html
@@ -128,8 +128,8 @@
   <!-- Map logic -->
   <script defer src="/assets/js/map.js"></script>
   
-  <!-- Playful IN highlighting – loads LAST so it sees final text with links -->
-  <script defer src="/assets/js/playful-in.js"></script>
+  <!-- Playful IN highlighting – loads LAST so it sees final text with links
+  <script defer src="/assets/js/playful-in.js"></script> -->
     
 </body>
 </html>
