Update SCRIPTS at footer

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -93,12 +93,16 @@
   </footer>
 
   <!-- Shared site JS (active nav, small helpers) -->
-  <script src="/assets/js/site.js"></script>
-
+  <script defer src="/assets/js/site.js"></script>
+  
   <!-- Leaflet JS (UNPKG) -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
+  <script defer src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  
   <!-- Meetups map logic -->
   <script src="/assets/js/meetupmap.js"></script>
+  
+  <!-- Playful IN highlighting – loads LAST so it sees final text with links -->
+  <script defer src="/assets/js/playful-in.js"></script>
+
 </body>
 </html>
