Added a missing defer  to SCRIPT

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -99,7 +99,7 @@
   <script defer src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   
   <!-- Meetups map logic -->
-  <script src="/assets/js/meetupmap.js"></script>
+  <script defer src="/assets/js/meetupmap.js"></script>
   
   <!-- Playful IN highlighting – loads LAST so it sees final text with links -->
   <script defer src="/assets/js/playful-in.js"></script>
